# TreeSnapshots

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  treesnap.sh
.github/workflows/: build.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/gui/: index.html  package-lock.json  package.json
apps/gui/src/: App.tsx
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
treesnap-gui/: README.md  package-lock.json  package.json
treesnap-gui/src/: App.css  App.tsx
treesnap-gui/src-tauri/: Cargo.toml
treesnap-gui/src-tauri/src/: lib.rs
