[package]
name = "treesnap"
version = "2.0.0"
description = "CLI tool for capturing file system tree snapshots"
authors = ["leejongyoung"]
edition = "2024"
license = "MIT"
repository = "https://github.com/leejongyoung/TreeSnapshots"

[[bin]]
name = "treesnap"
path = "src/main.rs"

[dependencies]
treesnap-core = { path = "../../crates/core" }
inquire   = "0.7"
indicatif = "0.17"
console   = "0.15"
