[package]
name = "treesnap-core"
version = "2.0.0"
description = "Core logic shared between the CLI and GUI for TreeSnapshots"
authors = ["leejongyoung"]
edition = "2024"
license = "MIT"
repository = "https://github.com/leejongyoung/TreeSnapshots"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
