[package]
name = "treesnapshots"
version = "2.0.3"
description = "A desktop GUI for capturing and managing file system tree snapshots"
authors = ["leejongyoung"]
edition = "2024"
license = "MIT"
repository = "https://github.com/leejongyoung/TreeSnapshots"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "treesnapshots_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
treesnap-core = { path = "../../../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

